# rust-swagger-api

./: Cargo.toml  Dockerfile  README.md
src/: docs.rs  handlers.rs  main.rs  models.rs
