[package]
name = "rust-swagger-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
thiserror = "1.0.69"

[profile.release]
opt-level = "z"        # "z" per dimensione minima, "3" per massima velocità
lto = true
codegen-units = 1
panic = "abort"
strip = true